CHANGES, mtx 1.2.12:
- Fix FreeBSD compile bugs
- Fix SGI compile bugs
- Add HP/UX port (I hope!), courtesy of William Smith. 
- Re-wrote ReadElementStatus to make work for %!@# brain dead firmware that
  reports non-existent drives (I hope!). Also has side-effect of now working
  with multiple-arm libraries (though it only sees first arm!).
- Cleaned up all -Wall messages.
- Cleaned up Linux Sparc, installs loaderinfo.1, courtesy of Matt Dainty.
- tapeinfo now reports status of CheckUnitReady.  
- tapeinfo no longer puts out Block Position if CheckUnitReady says 'no'.
- tapeinfo now puts out Density Code and Medium Type/Not Loaded (modification
    of patches sent in by Bob Rahe)

CHANGES, mtx 1.2.11:
- Added a GNU autoconf Makefile.in (still provide a Makefile for your use)
  *WARNING* autoconf is not yet working on all supported OS's! You may need
  to do the old-fashioned 'edit Makefile' bit!
- Changed mtx.h and mtxl.c to include and define various things based upon
  what features autoconf detected (e.g., if 'camlib.h', use FreeBSD-style
  'cam', if 'scsi/sg.h' use Linux-style 'sg', etc.). If I ever port to a
  Unix that has same SCSI interface as one of the existing ports, autoconf
  will handle it without me having to add another set of #if's or #ifdefs. 
- Went ahead and tossed mtxctl into contrib.
- In 'tapeinfo', skip \0 characters in serial numbers (some use \0 
  terminator, some do not, skip it if this one does). 
- in 'tapeinfo', dump out the block position and (if at BOP) the "BOP: Yes"
  flag. Also dump out other info such as block limits. 
- Put file 'sparc-patch1' contributed by Chaskiel M Grundman, and applied
  it (sigh)
- Added tapeinfo.py to 'contrib' directory
- Updated mtx.py in 'contrib' directory
- Created 'loaderinfo' program to report some misc. info about loaders.
- Created 'scsitape' program so that I don't have to keep messing with
  #@$%@! tape ioctls on the various Unixes that I'm porting tape software