@@ -10,43 +10,10 @@
 <center>
     <h1>SCSI Media Changer and Backup Device Control System</h1>
 </center>
-
-<h2> Announcement: </h2>
-As of today, May 14, 2001, long time Unix and Linux backup vendor
-Enhanced Software Technologies ceased operations.
-The former owner of EST is attempting to find the cash to buy the 
-company back from Atipa Corporation but that doesn't seem likely in
-today's harsh capital market.
 <p>
-With the loss of EST I no longer have access to tape changers and
-autoloaders.  I am releasing the last version of mtx, version 1.2.12,
-but unless I find employment with another vendor where I have access
-to tape hardware, it is unlikely that I will be able to continue
-development of 'mtx'. 
-<p> 
-I want to thank all the fine people that I
-worked with at EST for an enjoyable two years, and especially my
-BRU-Pro team members, Randy Kaelber, Richard Fish, Len Cheatham, and
-overseeing the zoo, Darrell Bingham and Kirk Thompson. 
-We did the impossible with
-incredibly small resources, and it saddens me that I will no longer
-have the opportunity of working with some of the best damned programmers I've
-ever worked with. Ironically, today we were to deliver BRU-Pro 1.1 to QA,
-which implemented virtually all of my original vision. 
-But that's how life works, sometimes. 
+[Also see the SourceForge <a href="http://sourceforge.net/projects/mtx">
+project page</a>.]
 <p>
-And I also want to thank you, the members of the 'mtx' mailing list.
-Without you, 'mtx' could not have reached its current mature state.
-I could single out a few people, but I'd inevitably leave someone
-out. So, you know who you are. Thanks. 
-<p>
-Finally, if anybody wants to offer me a job, my resume is online at
-<a href="http://badtux.org/eric/resume.html">http://badtux.org/eric/resume.html. </a>. 
-<p>
- -- <a href="mailto:eric@badtux.org">Eric Lee Green</a> 
-<p>
-<h2> Now back to our previous programming....</h2> 
-
 <i>mtx</i> is a set of low level driver programs to control features
 of SCSI backup related devices such as autoloaders, tape changers,
 media jukeboxes, and tape drives. It can also report much data,
@@ -87,23 +54,16 @@ to be under GPL also).
 </ul>
 
 <p>
-
- This program supposedly supports FreeBSD, Solaris, Linux, and
+ This program supposedly supports FreeBSD, Solaris, Linux, HP/UX, and
 IRIX. Tru64 Unix and VMS are probably irretrievably broken at this
 time. This program has been tested under FreeBSD, Solaris, and Linux,
-and there only with a limited set of hardware:
-<ul>
-<li> <i>Seagate DDS-4</i> six-tape DAT loader
-<li> <i>Exabyte EZ-17</i> seven-tape 8mm loader
-<li> <i>Exabyte 220</i>  21-tape dual-drive 8mm tape library. 
-<li> <i>Ecrix Autopack</i> 15-tape and 30-tape dual-drive 8mm tape library.
-<li> <i>HP SureStore DAT 40x6</i> 6 tape DAT loader. 
-</ul>
+and there only with a limited set of hardware. See the COMPATIBILITY 
+list in the source code.
 </ul>
 <h2> Source Code </h2>
 The current source code is:
 <ul>
-<li> <a href="http://mtx.sourceforge.net/mtx-1.2.12.tar.gz">http://mtx.sourceforge.net/mtx-1.2.12.tar.gz</a>
+<li> <a href="http://mtx.sourceforge.net/mtx-1.2.13.tar.gz">http://mtx.sourceforge.net/mtx-1.2.13.tar.gz</a>
 </ul>
 RPMs may be available from the following place:
 <ul>
@@ -177,7 +137,7 @@ CAML.
 
 <h2> Support </h2>
 <ul>
-<li>There is now a 'mtx' mailing list at <a href="http://sourceforge.net/project/?group_id=4626">http://sourceforge.net/project/?group_id=4626</a>. 
+<li>There is now a 'mtx' mailing list at <a href="http://sourceforge.net/projects/mtx/">http://sourceforge.net/projects/mtx/</a>. 
 <li>There is now a 'mtx' home page at <a href="http://mtx.sourceforge.net">http://mtx.sourceforge.net</a>.
 <li> There is now a FAQ that is part of the source code. Please read the
 FAQ first. 
@@ -199,7 +159,7 @@ href="mailto:eric@badtux.org">eric@badtux.org</a>). READ THE FAQ FIRST!
 
 <!-- Created: Fri Mar  3 12:19:38 MST 2000 -->
 <!-- hhmts start -->
-Last modified: Mon May 14 14:46:13 MST 2001
+Last modified: Mon Jun 25 15:37:22 MST 2001
 <!-- hhmts end -->
   </body>
 </html>
